syntax = "proto3";

package at.fhj.swengb.apps.battleship;

option java_package         = "at.fhj.swengb.apps.battleship";
option java_outer_classname = "BattleShipProtobuf";

// The same structure as in BattleShipGame was used, added alreadyClicked to show which cells were already clicked
message BattleShipGame {
    BattleField battleField = 1;
    repeated Pos alreadyClicked = 2;
}
// consists of height, width and fleet
message BattleField {
    int32 height = 1;
    int32 width = 2;
    Fleet fleet = 3;
}
// consists of a list of vessels
message Fleet {
    repeated Vessel vessel = 1;
}
// consists of name, starting position, direction and size
message Vessel {
    string name = 1;
    Pos startPos = 2;
    string direction = 3;
    int32 size = 4;
}
// consists of x and y coordinates
message Pos {
    int32 x = 1;
    int32 y = 2;
}
